adding new oscars survey, moving surveys to own rake file updating some text

--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="interior-hero">
     <h1 class="interior-hero__title">Take Surveys, Earn Credits</h1>
-    <p class="interior-hero__desc" >Fill out a quick survey to earn 50-100 credits!</p>
+    <p class="interior-hero__desc" >Fill out a quick survey to earn more credits!</p>
 </div><!--/.interior-hero -->
 
 <div class="interior-body">
