--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -7,4 +7,6 @@
         <%= render 'survey_three' %>
     <% when "movie-survey" %>
         <%= render 'survey_movie' %>
+    <% when "oscars-survey" %>
+        <%= render 'survey_oscars' %>        
 <% end %>
