--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -26,6 +26,7 @@
         <h2 class="tab-control__title js-tab--cat ga-tab--weekly" data-tab-cat=".leaderboard--weekly" >Weekly</h2>
     </div>
 </section>
+<!-- If game is tap the right color -->
 <% if false %>
     <div class="leaderboard__cat-wrapper">
         <div class="leaderboard__cat leaderboard__cat--3">
@@ -36,6 +37,7 @@
     </div>
 <% end %>
 
+<!-- If game is tap the right color -->
 <% if false %>
  <div class="js-leaderboard--easy js-leaderboard-diff leaderboard-diff active">
     <h2 class="leaderboard-diff__title">EASY </h2>
@@ -164,7 +166,7 @@
                <% name = record[0] %>
                <% image = record[1] %>
                <% score = record[2] %>
-            
+
                     <div class="leaderboard-row">
                         <span class="leaderboard-rank"><%= rank %>
                             <span class="leaderboard__avatar" style="<% if !image.blank? %>background-image: url(<%= image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
@@ -183,7 +185,7 @@
                         <div class="social-share__wrap">
                             <a href="https://www.facebook.com/dialog/feed?app_id=<%=ENV['FACEBOOK_KEY']%>&description=Check%20out%20Luckee%20and%20earn%20cash%20for%20playing%20free%20games&link=http%3A%2F%2Fwww.getluckee.com&name=Play%20free%20games.%20Earn%20real%20cash.&redirect_uri=<%=root_url%>" class="social-btn social-btn--fb"><i class="fa fa-facebook"></i></a>
                             <a href="http://twitter.com/home?status=Play%20free%20games.%20Earn%20real%20cash.%20www.getluckee.com%2Finvite%2F<%= current_user.referral %>" class="social-btn social-btn--twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="mailto:someone@example.com?subject=Play%20free%20games.%20Earn%20real%20cash.&body=Play%20free%20games.%20Earn%20real%20cash.%20www.getluckee.com%2Finvite%2F<%= current_user.referral %>" target="_top"" class="social-btn social-btn--mail"><i class="fa fa-envelope"></i></a>
+                            <a href="mailto:someone@example.com?subject=Play%20free%20games.%20Earn%20real%20cash.&body=Play%20free%20games.%20Earn%20real%20cash.%20www.getluckee.com%2Finvite%2F<%= current_user.referral %>" target="_top" class="social-btn social-btn--mail"><i class="fa fa-envelope"></i></a>
 
                         </div>
                     </div>
