--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,7 @@
 @import "reset";
 @import "surveys";
 @import "forms";
+@import "social_btn";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
