--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -9,11 +9,11 @@
 <!-- Current User -->
 <div class="leaderboard-row leaderboard-row--current-user">
     <div class="leaderboard-row__wrap">
-        <span class="leaderboard-rank">1
+        <span class="leaderboard-rank"><%= current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"] %>
             <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
         </span>
         <span class="leaderboard-user"><%= current_user.name %></span>
-        <span class="leaderboard-score">687</span>
+        <span class="leaderboard-score"><%= current_user_record({slug:@game.slug,timeframe:'alltime'})["score"] %></span>
     </div>
 </div><!-- /.leaderboard-row -->
 
@@ -27,7 +27,7 @@
     </div>
 </section>
 <!-- If game is tap the right color -->
-<% if false %>
+<% if @game.slug == 'tap-color' %>
     <div class="leaderboard__cat-wrapper">
         <div class="leaderboard__cat leaderboard__cat--3">
             <h2 class="tab-control__title js-tab--difficulty active" data-tab-cat=".js-leaderboard--easy">Easy</h2>
@@ -36,29 +36,35 @@
         </div>
     </div>
 <% end %>
-
+       
 <!-- If game is tap the right color -->
-<% if false %>
+<% if @game.slug == 'tap-color' %>
  <div class="js-leaderboard--easy js-leaderboard-diff leaderboard-diff active">
     <h2 class="leaderboard-diff__title">EASY </h2>
     <section class="game-leaderboard">
         <div class="tab-section js-tab-section leaderboard leaderboard--all-time active">
             <!-- Start Loop -->
-            <div class="leaderboard-row">
-                <span class="leaderboard-rank">1</span>
-                <span class="leaderboard-user">Alex Morgan</span>
-                <span class="leaderboard-score">687</span>
-            </div><!-- /.leaderboard-row -->
+            <% get_leaderboard_hash({game_id:@game.id,version: 1,timeframe: 'alltime'}).each_with_index do | record, i | %>
+                <% break if i > 9 %>
+                <div class="leaderboard-row">
+                    <span class="leaderboard-rank"><%= record[0] %><span class="leaderboard__avatar" style="background-image: url('<%= record[1]["image"] %>'); "></span></span>
+                    <span class="leaderboard-user"><%= record[1]["name"] %></span>
+                    <span class="leaderboard-score"><%= record[1]["score"] %></span>
+                </div><!-- /.leaderboard-row -->
+            <% end %>
             <!-- End Loop -->
         </div>
 
         <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
             <!-- Start Loop -->
+            <% get_leaderboard_hash({game_id:@game.id,version: 1,timeframe: 'weekly'}).each_with_index do | record, i | %>
+                <% break if i > 9 %>
                 <div class="leaderboard-row">
-                    <span class="leaderboard-rank">1</span>
-                    <span class="leaderboard-user">John Doe</span>
-                    <span class="leaderboard-score">687</span>
+                    <span class="leaderboard-rank"><%= record[0] %><span class="leaderboard__avatar" style="background-image: url('<%= record[1]["image"] %>'); "></span></span>
+                    <span class="leaderboard-user"><%= record[1]["name"] %></span>
+                    <span class="leaderboard-score"><%= record[1]["score"] %></span>
                 </div><!-- /.leaderboard-row -->
+            <% end %>
             <!-- End Loop -->
         </div>
     </section>
@@ -202,25 +208,24 @@
             <% end %>
             <!-- End Loop -->
         </div>
-
         <div class="tab-section js-tab-section leaderboard leaderboard--all-time">
-            <% get_alltime_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
+            <% get_leaderboard_hash({game_id:@game.id,version: nil,timeframe: 'alltime'}).each_with_index do | record, i | %>
+                 <% break if i > 9 %>
                 <div class="leaderboard-row">
-                    <span class="leaderboard-rank"><%= rank %><span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span></span>
-                    <span class="leaderboard-user"><%= record[0] %></span>
-                    <span class="leaderboard-score"><%= record[1] %></span>
+                    <span class="leaderboard-rank"><%= record[0] %><span class="leaderboard__avatar" style="background-image: url('<%= record[1]["image"] %>'); "></span></span>
+                    <span class="leaderboard-user"><%= record[1]["name"] %></span>
+                    <span class="leaderboard-score"><%= record[1]["score"] %></span>
                 </div><!-- /.leaderboard-row -->
             <% end %>
         </div>
 
         <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
-            <% get_weekly_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
+            <% get_leaderboard_hash({game_id:@game.id,version: nil,timeframe: 'weekly'}).each_with_index do | record, i | %>
+                 <% break if i > 9 %>
                 <div class="leaderboard-row">
-                    <span class="leaderboard-rank"><%= rank %>
-                        <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
-                    </span>
-                    <span class="leaderboard-user"><%= record[0] %></span>
-                    <span class="leaderboard-score"><%= record[1] %></span>
+                    <span class="leaderboard-rank"><%= record[0] %><span class="leaderboard__avatar" style="background-image: url('<%= record[1]["image"] %>'); "></span></span>
+                    <span class="leaderboard-user"><%= record[1]["name"] %></span>
+                    <span class="leaderboard-score"><%= record[1]["score"] %></span>
                 </div><!-- /.leaderboard-row -->
             <% end %>
         </div>
