--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -11,6 +11,12 @@ $traffic-font: #8DA339;
 $falldown-bg: #a2a2a2;
 $falldown-font: #FEE2C7;
 
+
+.leaderboard--all-time,
+.leaderboard--weekly {
+    padding-bottom: calc(50vh - 110px);
+}
+
 .leaderboard-svg {
     height: 20px;
     width: 20px;
@@ -62,7 +68,8 @@ $falldown-font: #FEE2C7;
     position: absolute;
     margin: 0 auto;
     width: 85%;
-    bottom: 100px;
+    bottom: 50px;
+    // bottom: 100px;
     left: 0;
     right: 0;
 }
@@ -150,7 +157,7 @@ $falldown-font: #FEE2C7;
 }
 .tab-section {
     display: none;
-    padding: 0 7.5%;
+    // padding: 0 7.5%;
     &.active {
         display: block;
     }
@@ -181,8 +188,12 @@ $falldown-font: #FEE2C7;
     }
 }
 .leaderboard-row {
+    // padding: 20px 5px;
+    border-top: none;
+    padding: 15px 0;
+    width: 90%;
     color: $charcoal;
-    padding: 20px 5px;
+    margin: auto;
     display: block;
     overflow: hidden;
     & + .leaderboard-row {
@@ -196,16 +207,25 @@ $falldown-font: #FEE2C7;
     }
 }
 .leaderboard-row__wrap {
-    padding: 0 7.5%;
+    padding: 0 10px;
 }
 .leaderboard-row--current-user {
-    position: fixed;
-    bottom: -10px;
+    .fb-connected & {
+        display: none;
+    }
+    // position: fixed;
+    // bottom: -10px;
+    // z-index: 9;
     width: 100vw;
-    z-index: 9;
-    padding: 20px 0;
+    padding: 15px 0;
     background-color: $lavender;
     @include transition(bottom, 0.15s, ease-in, 1s);
+
+    .leaderboard-row__wrap {
+        padding: 0 10px;
+        width: calc(90% - 20px);
+        margin: auto;
+    }
 
     &.animate {
         bottom: 50px;
@@ -221,8 +241,8 @@ $falldown-font: #FEE2C7;
     text-align: left;
 
     .leaderboard__avatar {
-        height: 40px;
-        width: 40px;
+        height: 35px;
+        width: 35px;
         position: absolute;
         border-radius: 100%;
         background-position: center;
@@ -230,7 +250,8 @@ $falldown-font: #FEE2C7;
         background-repeat: no-repeat;
         float: none;
         left: 30px;
-        top: -10px;
+        top: 50%;
+        margin-top: -17.5px;
     }
 }
 .leaderboard-user {
